<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_title_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#009688"
            app:layout_constraintBottom_toBottomOf="@+id/tv_movie_og_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/actionBarItemBackground" />

        <TextView
            android:id="@+id/tv_movie_og_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Original Title" />

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="150dp"
            android:layout_height="225dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_des_poster"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_title_bg" />

        <TextView
            android:id="@+id/tv_movie_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
            app:layout_constraintTop_toTopOf="@+id/iv_movie_poster"
            tools:text="2015" />

        <TextView
            android:id="@+id/tv_movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_movie_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_date"
            tools:text="8.5/10" />

        <ImageView
            android:id="@+id/btn_favorite"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/tv_movie_rating"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_rating" />

        <TextView
            android:id="@+id/tv_movie_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster"
            tools:text="Movie description will show up here." />

        <ImageView
            android:id="@+id/divider_trailer"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_summary"
            app:srcCompat="@android:drawable/divider_horizontal_bright" />

        <TextView
            android:id="@+id/tv_trailer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/trailers_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_trailer" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trailer_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_trailer_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_trailer_title" />

        <TextView
            android:id="@+id/tv_trailer_unavailable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:paddingBottom="8dp"
            android:text="@string/trailers_unavailable"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_trailer_title"
            app:layout_constraintStart_toEndOf="@+id/tv_trailer_title"
            app:layout_constraintTop_toTopOf="@+id/tv_trailer_title" />

        <ImageView
            android:id="@+id/divider_review"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_trailer_list"
            app:srcCompat="@android:drawable/divider_horizontal_bright" />

        <TextView
            android:id="@+id/tv_review_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/reviews_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_review" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_review_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_review_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_review_title" />

        <TextView
            android:id="@+id/tv_review_unavailable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/reviews_unavailable"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_review_title"
            app:layout_constraintStart_toEndOf="@+id/tv_review_title"
            app:layout_constraintTop_toTopOf="@+id/tv_review_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>